gcampus/core/static_src/styles/_navbar.scss
/*!
 * Copyright (C) 2021 desklab gUG (haftungsbeschränkt)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

.gcampus-navbar {
  height: $gcampus-navbar-height;
}

#navbar-title {
  overflow-y: hidden;
  overflow-x: scroll;
}

main {
  padding-top: calc(#{$gcampus-navbar-height} + #{map-get($spacers, 3)});
  &.main-pt-0 {
    padding-top: $gcampus-navbar-height;
  }
}

